fixed spacing with logo

--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ img{
         width: 12vw; 
         margin-right: 5vw;
         margin-bottom: 5vh; 
+        margin-left: 1.5vw;
     }
     .home-college-box{
         height: 50vh; 
@@ -309,6 +310,7 @@ img{
         width: 15vw; 
         margin-right: 5vw;
         margin-bottom: 5vh; 
+        margin-left: 2vw; 
     }
     .home-college-box{
         height: 70vh; 
